--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,7 @@
     "jp.keijiro.beta": "1.0.1",
     "jp.keijiro.kino.post-processing": "2.1.12",
     "jp.keijiro.klak.math": "1.0.1",
-    "jp.keijiro.klak.motion": "1.0.1"
+    "jp.keijiro.klak.motion": "1.0.1",
+    "jp.keijiro.smrvfx": "1.1.0"
   }
 }
