--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
   ],
   "dependencies": {
     "com.unity.burst": "1.2.3",
+    "com.unity.ugui": "1.0.0",
     "jp.keijiro.beta": "1.0.1",
     "jp.keijiro.kino.post-processing": "2.1.12",
     "jp.keijiro.klak.math": "1.0.1",
