--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -13,6 +13,8 @@
     "jp.keijiro.kino.post-processing": "2.1.12",
     "jp.keijiro.klak.math": "1.0.1",
     "jp.keijiro.klak.motion": "1.0.1",
+    "jp.keijiro.metamesh": "0.0.1",
+    "jp.keijiro.noiseshader": "1.0.0",
     "jp.keijiro.smrvfx": "1.1.0"
   }
 }
