--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,20 +1,24 @@
 {
   "scopedRegistries": [
-  {
-    "name": "Keijiro",
-    "url": "https://registry.npmjs.com",
-    "scopes": [ "jp.keijiro" ]
-  }
+    {
+      "name": "Unity NuGet",
+      "url": "https://unitynuget-registry.azurewebsites.net",
+      "scopes": [ "org.nuget" ]
+    },
+    {
+      "name": "Keijiro",
+      "url": "https://registry.npmjs.com",
+      "scopes": [ "jp.keijiro" ]
+    }
   ],
   "dependencies": {
     "com.unity.burst": "1.2.3",
-    "com.unity.ugui": "1.0.0",
     "jp.keijiro.beta": "1.0.1",
     "jp.keijiro.kino.post-processing": "2.1.12",
     "jp.keijiro.klak.math": "1.0.1",
     "jp.keijiro.klak.motion": "1.0.1",
-    "jp.keijiro.metamesh": "0.0.1",
-    "jp.keijiro.noiseshader": "1.0.0",
+    "jp.keijiro.lasp": "2.1.2",
+    "jp.keijiro.minis": "1.0.7",
     "jp.keijiro.smrvfx": "1.1.0"
   }
 }
