--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -17,7 +17,7 @@
     "jp.keijiro.kino.post-processing": "2.1.12",
     "jp.keijiro.klak.math": "1.0.1",
     "jp.keijiro.klak.motion": "1.0.1",
-    "jp.keijiro.lasp": "2.1.2",
+    "jp.keijiro.laspvfx": "1.0.0",
     "jp.keijiro.minis": "1.0.7",
     "jp.keijiro.smrvfx": "1.1.0"
   }
