--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,12 +3,16 @@
     {
       "name": "Unity NuGet",
       "url": "https://unitynuget-registry.azurewebsites.net",
-      "scopes": [ "org.nuget" ]
+      "scopes": [
+        "org.nuget"
+      ]
     },
     {
       "name": "Keijiro",
       "url": "https://registry.npmjs.com",
-      "scopes": [ "jp.keijiro" ]
+      "scopes": [
+        "jp.keijiro"
+      ]
     }
   ],
   "dependencies": {
@@ -19,6 +23,11 @@
     "jp.keijiro.klak.motion": "1.0.1",
     "jp.keijiro.laspvfx": "1.0.1",
     "jp.keijiro.minis": "1.0.7",
-    "jp.keijiro.smrvfx": "1.1.0"
+    "jp.keijiro.smrvfx": "1.1.0",
+    "com.unity.modules.animation": "1.0.0",
+    "com.unity.modules.audio": "1.0.0",
+    "com.unity.modules.imageconversion": "1.0.0",
+    "com.unity.modules.physics": "1.0.0",
+    "com.unity.modules.uielements": "1.0.0"
   }
 }
