--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,6 @@
 {
   "scopedRegistries": [
     {
-      "name": "Unity NuGet",
-      "url": "https://unitynuget-registry.azurewebsites.net",
-      "scopes": [
-        "org.nuget"
-      ]
-    },
-    {
       "name": "Keijiro",
       "url": "https://registry.npmjs.com",
       "scopes": [
@@ -16,18 +9,13 @@
     }
   ],
   "dependencies": {
-    "com.unity.burst": "1.3.2",
-    "jp.keijiro.beta": "1.0.1",
-    "jp.keijiro.kino.post-processing": "2.1.13",
+    "jp.keijiro.beta": "1.0.2",
+    "jp.keijiro.kino.post-processing": "2.1.15",
     "jp.keijiro.klak.math": "1.0.1",
-    "jp.keijiro.klak.motion": "1.0.1",
-    "jp.keijiro.laspvfx": "1.0.1",
-    "jp.keijiro.minis": "1.0.7",
-    "jp.keijiro.smrvfx": "1.1.0",
-    "com.unity.modules.animation": "1.0.0",
-    "com.unity.modules.audio": "1.0.0",
-    "com.unity.modules.imageconversion": "1.0.0",
-    "com.unity.modules.physics": "1.0.0",
-    "com.unity.modules.uielements": "1.0.0"
+    "jp.keijiro.klak.motion": "1.1.0",
+    "jp.keijiro.laspvfx": "1.0.2",
+    "jp.keijiro.libsoundio": "1.0.5",
+    "jp.keijiro.minis": "1.0.10",
+    "jp.keijiro.smrvfx": "1.1.6"
   }
 }
